// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main app bar component MenuButton renders correctly 1`] = `
<WithStyles(Button)
  className="test-class-1"
>
  <WithStyles(Typography)
    color="inherit"
    noWrap={true}
    style={
      Object {
        "marginTop": 3,
      }
    }
  >
    test
  </WithStyles(Typography)>
</WithStyles(Button)>
`;

exports[`Main app bar component app bar indented when drawer is open 1`] = `
<div
  className="MainAppBar-root-1"
>
  <WithStyles(AppBar)
    className="MainAppBar-appBar-2 MainAppBar-appBarShift-3"
    position="static"
  >
    <WithStyles(Toolbar)>
      <WithStyles(IconButton)
        className="MainAppBar-menuButton-7 MainAppBar-hide-8"
        color="inherit"
        onClick={[Function]}
      >
        <pure(MenuIcon) />
      </WithStyles(IconButton)>
      <WithStyles(Typography)
        className="MainAppBar-title-5"
        color="inherit"
        noWrap={true}
        variant="h6"
      >
        Data Analysis as a Service
      </WithStyles(Typography)>
      <MenuButton
        buttonClassName="MainAppBar-button-6"
        buttonText="Contact"
      />
      <div
        className="MainAppBar-grow-4"
      />
      <WithStyles(IconButton)
        className="MainAppBar-button-6"
      >
        <pure(HelpOutlineIcon) />
      </WithStyles(IconButton)>
      <WithStyles(IconButton)
        className="MainAppBar-button-6"
      >
        <pure(AccountCircleIcon) />
      </WithStyles(IconButton)>
    </WithStyles(Toolbar)>
  </WithStyles(AppBar)>
</div>
`;

exports[`Main app bar component app bar renders correctly 1`] = `
<div
  className="MainAppBar-root-1"
>
  <WithStyles(AppBar)
    className="MainAppBar-appBar-2"
    position="static"
  >
    <WithStyles(Toolbar)>
      <WithStyles(IconButton)
        className="MainAppBar-menuButton-7"
        color="inherit"
        onClick={[Function]}
      >
        <pure(MenuIcon) />
      </WithStyles(IconButton)>
      <WithStyles(Typography)
        className="MainAppBar-title-5"
        color="inherit"
        noWrap={true}
        variant="h6"
      >
        Data Analysis as a Service
      </WithStyles(Typography)>
      <MenuButton
        buttonClassName="MainAppBar-button-6"
        buttonText="Contact"
      />
      <div
        className="MainAppBar-grow-4"
      />
      <WithStyles(IconButton)
        className="MainAppBar-button-6"
      >
        <pure(HelpOutlineIcon) />
      </WithStyles(IconButton)>
      <WithStyles(IconButton)
        className="MainAppBar-button-6"
      >
        <pure(AccountCircleIcon) />
      </WithStyles(IconButton)>
    </WithStyles(Toolbar)>
  </WithStyles(AppBar)>
</div>
`;
